# bevy_proj

./: .gitignore  Cargo.toml  settings.json
Data/Core/: mod.json
Data/Core/Defs/entities/: human.json  sint.json
Data/Core/Defs/items/: bullet.json  cobblestone.json  gun.json  iron_ingot.json  nail.json  stick.json
Data/Core/Defs/objects/: box.json  wall.json
Data/Core/Defs/objects_ct/: wall_ex.json
Data/Core/res/core/entities/: human.json
Data/Core/res/core/items/: bullet.json
draw-io/: draft.txt  logic.drawio  project.drawio  test.drawio
src/: main.rs  mob.rs  ui.rs
src/components/: Bullet.rs  Camera.rs  Container.rs  Craft.rs  Input.rs  ItemType.rs  Missile.rs  Movement.rs  ObjType.rs  mod.rs
src/entities/: Entity.rs  EntityAnimation.rs  EntityType.rs  Needs.rs  mod.rs
src/entities/items/: Item.rs  ItemType.rs  Weapon.rs  mod.rs
src/entities/player/: PlayerEntity.rs  mod.rs
src/entities/skills/: mod.rs
src/entities/stats/: mod.rs
src/items/: Item.rs  ItemType.rs  Weapon.rs  mod.rs
src/objects/: ObjType.rs  Object.rs  ObjectAnimation.rs  mod.rs
src/systems/: Camera.rs  ContainerSystem.rs  PlayerSystem.rs  TaskManager.rs  UserSystem.rs  mod.rs
src/systems/entities/: EntitySys.rs  EntitySystem.rs  mod.rs
src/systems/entities/ai/: Path.rs  mod.rs
src/systems/graphic/: Animation.rs  Atlas.rs  Graphic.rs  mod.rs
src/systems/interact/: Damage.rs  mod.rs
src/systems/interface/: Console.rs  GameUI.rs  Info.rs  Inventory.rs  MenuUI.rs  Styles.rs  UI.rs  mod.rs
src/systems/interface/game_ui/: BarGui.rs  Console.rs  Context.rs  Debug.rs  Info.rs  Inventory.rs  Select.rs  mod.rs
src/systems/resource/: Registry.rs  mod.rs
src/systems/resource/graphic/: Animation.rs  Atlas.rs  Connect.rs  Graphic.rs  mod.rs
src/systems/world/: Grid.rs  TileMap.rs  World.rs  mod.rs
src/systems/world/chunk/: Chunk.rs  ChunkManager.rs  ChunkUploader.rs  mod.rs
src/util/: Attributes.rs  Debug.rs  Settings.rs  Util.rs  mod.rs
