[package]
name = "sint-et"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2" }
bevy-inspector-egui = "0.23.4"
iyes_perf_ui = "0.2.3"
bevy_simple_text_input = "0.5.1"
bevy_pancam = "0.11.1"
bevy_entitiles = { version = "0.7.0" , features = ["physics", "serializing", "debug"] }
bevy_xpbd_2d = { version = "0.4.2"}
rand = { version = "0.8.5" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"