[package]
name = "sint-et"
version = "0.0.1"
edition = "2021"

[dependencies.bevy]
version = "0.13.2"
features = [
    "multi-threaded",
    "dynamic_linking",
    ]

[dependencies]
tracy-client = { version = "0.17.0", default-features = false, features = ["enable"] }
bevy_rapier2d = "0.25.0"
bevy_egui = "0.27"
bevy-inspector-egui = "0.24.0"
iyes_perf_ui = "0.2.3"
bevy_simple_text_input = "0.6.0"
# belly = { git = "https://github.com/jkb0o/belly/", branch = "main" }
bevy_pancam = "0.11.1"
bevy_pixel_camera = "0.13.0"
bevy_entitiles = { version = "0.8.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"